# ScriptsCollection

./: .gitignore  README.md  compile.py  pyproject.toml  requirements.txt
.supplemental/: README-template.md
lib/sys_info/: Linux_SysInfoApi_Install.json  Linux_SysInfoApi_Install.sh
lib/zabbix/: Linux_Zabbix_Install.json  Linux_Zabbix_Install.py
scriptlets/_common/: cmd.py  cmd_exists.sh  download.sh  firewall_allow.py  firewall_allow.sh  firewall_install.sh  firewall_remove.py  get_firewall.py  get_firewall.sh  get_wan_ip.py  get_wan_ip.sh  is_noninteractive.sh  os.sh  os_like.sh  os_version.sh  package_install.sh  package_remove.sh  print_header.sh  prompt_yn.sh  random_password.sh  require_root.py  require_root.sh  setconfigfile_orappend.sh
scriptlets/bz_eval_log/: log.sh
scriptlets/bz_eval_tui/: print_header.py  print_header.sh  prompt_text.py  prompt_text.sh  prompt_yn.py  prompt_yn.sh  table.py
scriptlets/com_unrealengine/: config_parser.py
scriptlets/firewalld/: install.sh
scriptlets/io_github_lsferreira42/: lib_ini.sh
scriptlets/openjdk/: install.sh
scriptlets/org_python/: venv_path_include.py
scriptlets/proton/: install.sh
scriptlets/ssh/: get_user_authorized_keys.py  get_user_public_key.py
scriptlets/steam/: install-steamcmd.sh  steamcmd_check_app_update.py  steamcmd_get_app_details.py  steamcmd_parse_manifest.py
scriptlets/suitecrm/: suitecrmsync.py
scriptlets/ufw/: install.sh
scriptlets/xvfb/: install.sh
scriptlets/yum/: repo_excludepkg.sh
scriptlets/zabbix/: repo-setup.sh
templates/: bash_template.sh  trmm_template.json  trmm_template.ps1  trmm_template.py  trmm_template.sh
(+51 files in other folders)
